prac 8, Miles to KM

--- a/prac_08/KivyDemos-master/KivyDemos-master/convert_miles_km.kv
+++ b/prac_08/KivyDemos-master/KivyDemos-master/convert_miles_km.kv
@@ -8,9 +8,10 @@ BoxLayout:
             text: '10'
             font_size: 48
             multiline: False
+        BoxLayout:
+            orientation:'vertical'
+            Button:             #up
+                text: "Up"
 
-        Button:             #up
-            text: "Up"
-
-        Button:             #down
-            text: "Down"
+            Button:             #down
+                text: "Down"
