--- a/prac_08/KivyDemos-master/KivyDemos-master/convert_miles_km.kv
+++ b/prac_08/KivyDemos-master/KivyDemos-master/convert_miles_km.kv
@@ -12,6 +12,17 @@ BoxLayout:
             orientation:'vertical'
             Button:             #up
                 text: "Up"
+                on_press: app.handle_incrementation(input_number.text, 1)
 
             Button:             #down
                 text: "Down"
+                on_press: app.handle_incrementation(input_number.text, -1)
+
+
+    Button:
+        text: "Convert Miles to Km"
+
+    Label:
+        id: output_distance
+        text: 'Output distance'
+        color: (1, 1, 0, 1)
