prac 8, Miles to KM,

--- a/prac_08/KivyDemos-master/KivyDemos-master/convert_miles_km.kv
+++ b/prac_08/KivyDemos-master/KivyDemos-master/convert_miles_km.kv
@@ -21,6 +21,7 @@ BoxLayout:
 
     Button:
         text: "Convert Miles to Km"
+        on_press: app.handle_convertion()
 
     Label:
         id: output_distance
