prac 8, Miles to KM,

--- a/prac_08/KivyDemos-master/KivyDemos-master/convert_miles_km.kv
+++ b/prac_08/KivyDemos-master/KivyDemos-master/convert_miles_km.kv
@@ -11,19 +11,17 @@ BoxLayout:
         BoxLayout:
             orientation:'vertical'
             Button:             #up
-                text: "Up"
+                text: 'Up'
                 on_press: app.handle_incrementation(input_number.text, 1)
 
             Button:             #down
-                text: "Down"
+                text: 'Down'
                 on_press: app.handle_incrementation(input_number.text, -1)
+        Button:
+            text: 'Convert Miles to Km'
+            on_press: app.handle_convertion(input_number.text)
 
-
-    Button:
-        text: "Convert Miles to Km"
-        on_press: app.handle_convertion()
-
-    Label:
-        id: output_distance
-        text: 'Output distance'
-        color: (1, 1, 0, 1)
+        Label:
+            id: output_distance
+            text: 'Output distance'
+            color: (1, 1, 0, 1)
